horizontal Scroll fix

--- a/src/App.css
+++ b/src/App.css
@@ -59,10 +59,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 2000px) {
-    /* ::-webkit-scrollbar {
+    ::-webkit-scrollbar {
         width: 15px;
     }
 
@@ -84,7 +86,7 @@ body {
     ::-webkit-scrollbar-thumb:hover {
         background-color: var(--primary);
         cursor: pointer;
-    } */
+    }
 }
 
 @media screen and (max-width: 768px) {
